--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
   <meta charset="utf-8">
   <title>notitia</title>
   <link rel="icon" type="image/png" href="colicon.png"/>
-  <link rel="stylesheet" type="text/css" href="style.css"/>
+  <link rel="stylesheet" type="text/css" href="css/index.css"/>
 
 </head>
 
-<img class ="banner" src="fcountylogo.png"></img>
+<img class ="banner" src="img/fcountylogo.png"></img>
 <header>
 <nav class = "border">
 	<ul>
