--- a/about.html
+++ b/about.html
@@ -18,32 +18,9 @@
 	</ul>
 </nav>
 </header>
-<div class = "shapeuptwittermain">
-<a class="twitter-timeline" data-width="600" data-height="500" href="https://twitter.com/PolicePoliceACP?ref_src=twsrc%5Etfw">Tweets by PolicePoliceACP</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-</div>
-<div class="vertical-menu">
-  
-  <a href="#" style="font-weight:bold">Top 10 Corrupted Cops of the USA</a>
-  <a href="link.html">> Link 1</a>
-  <a href="link.html">> Link 2</a>
-  <a href="link.html">> Link 3</a>
-  <a href="link.html">> Link 4</a>
-  <a href="link.html">> Link 5</a>
-  <a href="link.html">> Link 6</a>
-  <a href="link.html">> Link 7</a>
-  <a href="link.html">> Link 8</a>
-  <a href="link.html">> Link 9</a>
-  <a href="link.html">> Link 10</a>
-  <a href="link.html"></a>
-  <a href="link.html"></a>
-  <a href="link.html" style="font-weight:bold">(Dis)Honorable Mentions</a>
-  <a href="link.html">> Link 1</a>
-  <a href="link.html">> Link 2</a>
-  <a href="link.html">> Link 3</a>
-  <a href="link.html">> Link 4</a>
-</div>
 
-  <h1 class = "titlepage">About Sheriff Watch</h1>
+  <h1 class = "titlepage">About</h1>
+  
   <p class="titlepage">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum sollicitudin enim in lectus sagittis lacinia. Sed tempus lorem quis velit eleifend, non fermentum ipsum imperdiet. Phasellus dictum viverra nibh, quis molestie ipsum aliquam at. Nunc laoreet, justo ac ullamcorper facilisis, nisi sem auctor massa, eget imperdiet ante lorem nec libero. Aenean vitae nisl massa. Maecenas id libero mauris. Sed tempus malesuada diam sed ullamcorper. Nunc at dictum turpis. Fusce dignissim gravida augue ac aliquam. Curabitur pharetra massa ut tortor efficitur malesuada. Fusce a iaculis libero, vitae porttitor massa. Maecenas ultrices ex id mi efficitur, ut elementum neque feugiat. In hac habitasse platea dictumst. Cras iaculis justo sed est interdum mattis.  </p>
 
   </body>
@@ -55,6 +32,3 @@
 </footer>
 
 </html>
-
-
-
