--- a/meme.html
+++ b/meme.html
@@ -8,7 +8,7 @@
 
 </head>
 
-<img class ="banner" src="img/meme.png"></img>
+<img class ="banner" src="img/meme.PNG"></img>
 <header>
 <nav class = "border">
 	<ul>
