--- a/meme.html
+++ b/meme.html
@@ -14,7 +14,7 @@
 	<ul>
 		<li><a href="index.html">Home</a></li>
 		<li><a href="meme.html">Sunday March 25, 2018</a></li>
-		<li><a href="whatis.html">About</a></li>
+		<li><a href="about.html">About</a></li>
 	</ul>
 </nav>
 </header>
