--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <img class ="banner" src="img/logo.png"></img>
 <div class = "center">
-  <h1 > COMING SOON</h1>
+  <h1 class = "center">COMING SOON</h1>
 </div>
 <header>
 
