--- a/index.html
+++ b/index.html
@@ -5,18 +5,19 @@
   <title>Sheriff Watch</title>
   <link rel="icon" type="image/png" href="colicon.png"/>
   <link rel="stylesheet" type="text/css" href="css/index.css"/>
-
 </head>
 
 <img class ="banner" src="img/logo.png"></img>
-<div class = "center">
-  <h1 class = "center">COMING SOON</h1>
-</div>
 <header>
-
 </header>
+<body>
 
+  <div class = "centered">
+    <h1 class = "centered">COMING SOON</h1>
+  </div>
+</body>
 </html>
 
+</DOCTYPE>
 
 
